confirmation footer fix and home search bar off screen fix

--- a/public/css/order_buyer_confirmation.css
+++ b/public/css/order_buyer_confirmation.css
@@ -19,4 +19,5 @@
 }
 .confirmation-container {
   margin-bottom: 200px;
+  min-height: 90vh;
 }
