--- a/public/scss/home.scss
+++ b/public/scss/home.scss
@@ -156,6 +156,7 @@ body{
   background-color: rgba(0,0,0,.6);
   padding-top: 1%;
   padding-bottom: 2%;
+  width: 100%;
 }
 
 .search-row {
